# taype-driver-emp

./: .gitignore  .gitmodules  README.md  dune-project
lib/: driver.ml  dune  function_description.ml  type_description.ml
src/: CMakeLists.txt  emp-ffi.cpp  emp-ffi.h
test/: dune  millionaire.ml
